# TekiXquic

./: README.md  build.gradle  local.properties  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/xquicdemo/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/xquicdemo/: LongConnActivity.kt  MainActivity.kt  SetActivity.kt  SetCache.kt  ShortConnActivity.kt
app/src/main/res/layout/: activity_long.xml  activity_main.xml  activity_set.xml  activity_short.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/xquicdemo/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
xquic/: build.gradle  consumer-rules.pro
xquic/src/androidTest/java/com/lizhi/component/net/xquic/: ExampleInstrumentedTest.kt
xquic/src/main/: AndroidManifest.xml
xquic/src/main/cpp/: CMakeLists.txt  native-lib.c  native-lib.cpp  native-lib.h  native_xquic_common.c  native_xquic_common.h  native_xquic_jni.c  native_xquic_long.c  native_xquic_long.h  native_xquic_short.c  native_xquic_short.h
xquic/src/main/cpp/include/ev/: config.h
xquic/src/main/cpp/main/: common.h  xquic_client.c  xquic_client.h  xquic_client_long.c  xquic_client_long.h  xquic_client_short.c  xquic_client_short.h
xquic/src/main/cpp/main/callback/: app_proto_callbacks.h  engine_callback.c  engine_callbacks.h  h3_callbacks.c  transport_callbacks.c
xquic/src/main/cpp/main/include/: common.h  h3_callbacks.h  log.h  xquic_app_proto_callbacks.h  xquic_common.h  xquic_engine_callbacks.h  xquic_h3_callbacks.h  xquic_h3_ctrl.h  xquic_hq_ctrl.h  xquic_msg_queue.h  xquic_socket.h  xquic_transport_callbacks.h
xquic/src/main/cpp/main/src/: app_proto_callbacks.c  engine_callback.c  h3_callbacks.c  transport_callbacks.c  xquic_app_proto_callbacks.c  xquic_engine_callback.c  xquic_h3_callbacks.c  xquic_h3_ctrl.c  xquic_hq_callbacks.c  xquic_hq_ctrl.c  xquic_socket.c  xquic_transport_callbacks.c
xquic/src/main/cpp/share_libs/: README.txt
xquic/src/main/cpp/share_libs/include/: cQueue.h
xquic/src/main/cpp/share_libs/include/ev/: ev.h
xquic/src/main/cpp/share_libs/src/: cQueue.c
xquic/src/main/java/com/lizhi/component/net/xquic/: DemoActivity.kt  MainActivity.kt  XquicClient.kt  XquicWebSocket.kt
xquic/src/main/res/layout/: activity_main.xml
xquic/src/main/res/values/: strings.xml
(+63 files in other folders)
